--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="style.css">
     <title>Shy Billy</title>
 </head>
 <body>
-    <h1>Shy </h1>
+    <!-- Navigation -->
+    <header>
+        <nav class="nav">
+            <h1>My Web</h1>
+            <ul>
+                <li>Home</li>
+                <li> Contact Us</li>
+                <li>About US</li>
+                <li>Seriveces</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
