--- a/index.html
+++ b/index.html
@@ -20,5 +20,49 @@
             </ul>
         </nav>
     </header>
+
+    <!-- form -->
+
+    <div class="form-container">
+        <span>Register</span>
+        <form action="" class="form">
+            <div class="form-group">
+                <label for="fname">First Name</label>
+                <input type="text">
+            </div>
+
+            <div class="form-group">
+                <label for="lname">Last Name</label>
+                <input type="text">
+            </div>
+
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text">
+            </div>
+
+            <div class="form-group">
+                <label for="Number">Number</label>
+                <input type="text">
+            </div>
+
+            <div class="form-group">
+                <label for="Gender">Gender</label>
+                <select name="" id="">
+                    <option value="">select</option>
+                    <option value="">male</option>
+                    <option value="">female</option>
+                    <option value="">select</option>
+
+                </select>
+            </div>
+
+            <div class="form-group">
+                <button for="Password">Password</button>
+            </div>
+
+
+        </form>
+    </div>
 </body>
 </html>
